# MCP-Benchmark

./: .gitignore  .gitmodules  README.md
.claude/: settings.local.json
mcp-bench/: test_catalog_server.py
mcp-catalog/: .gitignore  README.md  api_key  commands.json  install.sh  requirements.txt
mcp-catalog/bibliomantic-mcp-server/: .gitignore  DEPLOYMENT_READY.md  ENHANCED_README.md  ENHANCEMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  __init__.py  apply_enhancements.sh  bibliomantic_fastmcp.py  bibliomantic_fastmcp_ethical.py  bibliomantic_server.py  divination.py  enhanced_bibliomantic_server.py  enhanced_divination.py  enhanced_iching_core.py  iching.py  migrate_to_enhanced.py  pyproject.toml  requirements.txt
mcp-catalog/bibliomantic-mcp-server/docs/: ADR-001-enhanced-data-layer.md
mcp-catalog/call-for-papers-mcp/call-for-papers-mcp-main/: LISENCE  README.md  app.py  requirements.txt  server.py
mcp-catalog/dexpaprika-mcp/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  openapi.yml  package.json  smithery.yaml
mcp-catalog/erickwendel-contributions-mcp/: .nvmrc  Dockerfile  LICENSE  README.md  mcp.jsonc  package.json  refs.txt  smithery.yaml
mcp-catalog/erickwendel-contributions-mcp/erickwendel-sdk/: index.ts  schema.graphql  schema.ts  types.ts
mcp-catalog/erickwendel-contributions-mcp/src/: index.ts
mcp-catalog/erickwendel-contributions-mcp/test/: posts.test.ts  setup.ts  talks.test.ts  types.ts  videos.test.ts
mcp-catalog/eve-online-mcp/: .env.example  .gitignore  Dockerfile  README.md  package.json  smithery.yaml  tsconfig.json
mcp-catalog/eve-online-mcp/src/: index.ts
mcp-catalog/finance-calculator/src/: index.ts
mcp-catalog/fruityvice-mcp/: README.md  app.py  requirements.txt  server.py
mcp-catalog/game-trends-mcp/: .gitignore  Dockerfile  app.py  requirements.txt  server.py  smithery.yaml
mcp-catalog/hugeicons-mcp-server/: .gitignore  Dockerfile  README.md  package.json  smithery.yaml  tsconfig.json
mcp-catalog/hugeicons-mcp-server/src/: index.ts  types.ts
mcp-catalog/huggingface-mcp-server/: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
mcp-catalog/huggingface-mcp-server/src/huggingface/: server.py
mcp-catalog/jinko-mcp/: .gitignore  README.md  facilities.json  package.json  travel-bff.yaml  wrangler.jsonc
mcp-catalog/jinko-mcp/src/: index.ts  remote.ts
mcp-catalog/math-mcp/: README.md  package.json
mcp-catalog/math-mcp/src/: index.ts
mcp-catalog/mcp-github-trending/: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
mcp-catalog/mcp-github-trending/src/mcp_server_github_trending/: __init__.py  __main__.py  server.py
mcp-catalog/mcp-osint-server/: README.md
mcp-catalog/mcp-osint-server/mcp_osint_server/: Dockerfile  setup.py  smithery.yaml
mcp-catalog/mcp-reddit/: Dockerfile
mcp-catalog/mcp-server-leetcode/: .gitignore  Dockerfile  LICENSE  README.md  package.json  tsconfig.json
mcp-catalog/mcp-server-leetcode/src/: index.ts
mcp-catalog/mcp-server-nationalparks/: .gitignore  Dockerfile  LICENSE  README.md  package.json  smithery.yaml
mcp-catalog/mcp-server-nationalparks/src/: config.ts  constants.ts  formatters.ts  index.ts  schemas.ts  server.ts
mcp-catalog/mcp-units/: Dockerfile  README.md  pyproject.toml  smithery.yaml
mcp-catalog/mcp-units/mcp_units/: __init__.py  server.py
mcp-catalog/mcp-units/mcp_units/converters/: __init__.py  temperature.py  volume.py  weight.py
mcp-catalog/mcp-units/mcp_units/utils/: __init__.py  validation.py
mcp-catalog/metmuseum-mcp/src/: index.ts
mcp-catalog/mlb-mcp/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smithery.yaml
mcp-catalog/mlb-mcp/.github/workflows/: pre-commit.yml  test.yml
mcp-catalog/mlb-mcp/mlb_stats_mcp/: __init__.py  server.py
mcp-catalog/mlb-mcp/mlb_stats_mcp/prompts/: prompts.py
mcp-catalog/mlb-mcp/mlb_stats_mcp/tests/: conftest.py
mcp-catalog/mlb-mcp/mlb_stats_mcp/tools/: mlb_statsapi_tools.py  pybaseball_plotting_tools.py  pybaseball_supp_tools.py  statcast_tools.py
mcp-catalog/mlb-mcp/mlb_stats_mcp/utils/: images.py  logging_config.py
mcp-catalog/mlb-mcp/mlb_stats_mcp/utils/scripts/: data_download.py
mcp-catalog/mlb-mcp/mlb_stats_mcp_client/: README.md  package.json
mcp-catalog/mlb-mcp/mlb_stats_mcp_client/src/app/: layout.tsx  page.tsx
mcp-catalog/mlb-mcp/mlb_stats_mcp_client/src/app/api/llm/: route.ts
mcp-catalog/mlb-mcp/mlb_stats_mcp_client/src/app/results/: page.tsx
mcp-catalog/movie-recommender-mcp/movie-reccomender-mcp/: Dockerfile  mcp.yaml  movie_recommender.py  requirements.txt  server.py
mcp-catalog/nasa-mcp/: Dockerfile  LICENSE  README.md  README_es.md  main.py  pyproject.toml  smithery.yaml
mcp-catalog/nasa-mcp/.github/workflows/: pypi-publish.yml
mcp-catalog/nasa-mcp/src/nasa_mcp/: __init__.py  server.py
mcp-catalog/okx-mcp/: .gitignore  README.md  package.json
mcp-catalog/opgg-mcp/: Dockerfile  LICENSE  README.md  package.json  smithery.yaml
mcp-catalog/scientific_computation_mcp/: Dockerfile  README.md  pyproject.toml  smithery.yaml
mcp-catalog/scientific_computation_mcp/src/: linear_algebra.py  server.py  vector_calculus.py  visualization.py
mcp-catalog/sherlock_mcp/: Dockerfile  README.md  get_links.py  get_nsfw_links.py  main.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
mcp-catalog/weather_mcp/: README_MCP_WEATHER.md  README_USAGE.md  app.py  package.json  requirements.txt  server.py  simple_weather_server.py  weather_web_app.html
mcp-catalog/wikipedia-mcp/: .gitignore  CHANGELOG.md  Dockerfile  PUBLISHING_GUIDE.md  README.md  pyproject.toml  pytest.ini  release_payload.json  requirements-dev.txt
mcp-catalog/wikipedia-mcp/.github/workflows/: publish.yml  release.yml  test.yml
mcp-catalog/wikipedia-mcp/docs/: API.md  DEVELOPMENT.md  RELEASE_PROCESS.md
mcp-catalog/wikipedia-mcp/tests/: __init__.py
mcp-catalog/wikipedia-mcp/wikipedia_mcp/: __init__.py  __main__.py  server.py  wikipedia_client.py
(+75 files in other folders)
