[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-units"
version = "0.2.0"
description = "An MCP server for cooking unit conversions"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["mcp", "cooking", "units", "conversion"]
authors = [
    { name = "Diamantis Sellis", email = "sellisd@gmail.com" }
]
dependencies = [
    "jsonschema>=4.0.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.5",
    "mcp==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-units = "mcp_units.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_units"]

[tool.hatch.build]
packages = ["mcp_units"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: mark test as an async test",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
