[project]
name = "nasa-mcp"
version = "0.1.0"
description = "NASA API integration with MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
nasa_mcp = "nasa_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]